<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/my_deals_background"
    android:orientation="vertical"
    android:paddingBottom="1dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".LoginActivity" >
    
    <LinearLayout
          android:orientation="vertical"
          android:layout_width="match_parent"
          android:layout_height="wrap_content"
          android:padding="10dip">
          <!--  Email Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/email"
              android:textStyle="bold"
              android:textColor="@color/gray_2" />

          <EditText
              android:id="@+id/email"
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:layout_marginBottom="@dimen/login_edittext_vertical_margin_bottom"
              android:layout_marginTop="@dimen/login_edittext_vertical_margin_top"
              android:inputType="textEmailAddress"
              android:singleLine="true"
              android:background="@drawable/clipped_edittext"
              android:textColor="@color/white"
              android:textSize="@dimen/login_edittext_text_size" />

          <!--  Password Label -->

          <TextView
              android:layout_width="fill_parent"
              android:layout_height="wrap_content"
              android:text="@string/password"
              android:textStyle="bold"
              android:textColor="@color/gray_2" />

          <EditText 
                android:id="@+id/password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_edittext_vertical_margin_bottom"
                android:layout_marginTop="@dimen/login_edittext_vertical_margin_top"
                android:singleLine="true"
                android:background="@drawable/clipped_edittext"
                android:textColor="@color/white"
                android:textSize="@dimen/login_edittext_text_size"
                android:inputType="textPassword"/>
          <!-- Login button -->
          <Button android:id="@+id/btnLogin"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:onClick="onLoginClick"
                android:background="@drawable/btn_teal" 
                android:textColor="@color/white"/>
          
          <!-- Link to Forgot Password -->
          <TextView android:id="@+id/link_to_forgot_password"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/forgot_password"
                android:layout_marginTop="25dp"
                android:gravity="center"
                android:textSize="18sp"
                android:onClick="onForgotPasswordClicked"
                android:clickable="true"
                android:textColor="@color/teal"/>

	</LinearLayout>
</ScrollView>
