<merge xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context=".ResetPasswordActivity" >

    <!-- Reset Password form -->

    <ScrollView
        android:id="@+id/pw_reset_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/hero_android_large"
        android:isScrollContainer="false">

        <LinearLayout
            style="@style/PasswordResetFormContainer"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_edittext_vertical_margin_bottom"
                android:layout_marginTop="@dimen/login_edittext_vertical_margin_top"
                android:hint="@string/prompt_password"
                android:inputType="textPassword"
                android:fontFamily=""
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/clipped_edittext"
                android:textColor="@color/white"
                android:textSize="@dimen/login_edittext_text_size" />

            <EditText
                android:id="@+id/confirm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/login_edittext_vertical_margin_bottom"
                android:layout_marginTop="@dimen/login_edittext_vertical_margin_top"
                android:hint="@string/prompt_confirm"
                android:inputType="textPassword"
                android:fontFamily=""
                android:maxLines="1"
                android:singleLine="true"
                android:background="@drawable/clipped_edittext"
                android:textColor="@color/white"
                android:textSize="@dimen/login_edittext_text_size" />

            <Button
                android:id="@+id/pw_reset_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                android:paddingLeft="32dp"
                android:paddingRight="32dp"
                android:text="@string/action_pw_reset"
                android:background="@drawable/btn_teal" 
                android:textColor="@color/white"
                android:onClick="onResetClick"
                android:textStyle="bold"
                android:shadowColor="@color/teal_dark"
		        android:shadowDx="1.5"
		        android:shadowDy="1.5"
		        android:shadowRadius="3.0" />
        </LinearLayout>
    </ScrollView>

</merge>
