<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="0dp" >

    <LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:background="@color/brown"
	    android:orientation="vertical">
	    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:layout_margin="0dp"
        android:layout_marginRight="0dp"
        android:background="@drawable/button_bar_3"
        android:baselineAligned="false"
        android:measureWithLargestChild="false"
        android:orientation="horizontal"
        android:paddingLeft="0dp"
        android:paddingRight="0dp" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="0.3"
            android:clickable="true"
            android:gravity="center"
            android:onClick="mapClick"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/mapIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/icon_map_marker"
                android:textColor="@color/tan"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/openMapText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:text="Open Map"
                android:textColor="@color/tan"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginTop="7dp"
            android:layout_weight="0.3"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onCallClicked"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/callIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="0dp"
                android:text="@string/icon_phone"
                android:textColor="@color/tan"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/callText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_marginTop="5dp"
                android:text="Call"
                android:textColor="@color/tan"
                android:textSize="12sp" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="0.3"
            android:baselineAligned="false"
            android:clickable="true"
            android:gravity="center"
            android:onClick="onWebsiteClick"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/visitIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="0dp"
                android:text="@string/icon_info_sign"
                android:textColor="@color/tan"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="Visit Website"
                android:textColor="@color/tan"
                android:textSize="12sp" />

        </LinearLayout>
    </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginLeft="0dp"
        android:layout_marginRight="0dp"
        android:layout_marginTop="0dp"
        android:orientation="vertical"
        android:padding="0dp" >

        <com.talool.mobile.android.util.TaloolSmartImageView
            android:id="@+id/dealsMerchantImage"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:adjustViewBounds="false"
            android:contentDescription="Deals Merchant Image"
            android:scaleType="fitXY" />

        <ListView
            android:id="@+id/dealsAcquiredList"
            android:layout_width="fill_parent"
            android:layout_height="match_parent"
            android:background="@color/white"
            android:footerDividersEnabled="false"
            android:headerDividersEnabled="false"
            android:orientation="vertical" >

        </ListView>
        <View
    		android:layout_width="fill_parent"
        	android:layout_height="1px"
        	android:background="@color/gray" />
    </LinearLayout>

</LinearLayout>