<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="match_parent"
    android:background="@drawable/my_deals_background"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="85dp"
        android:layout_margin="0dp"
        android:background="@drawable/button_bar2_brown"
        android:orientation="horizontal" >

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginLeft="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="0.5"
            android:clickable="true"
            android:gravity="center"
            android:orientation="vertical" 
            android:onClick="acceptGiftClick" >

            <TextView
                android:id="@+id/thumbsUpIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/icon_thumbs_up_alt"
                android:textColor="@color/tan"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/thumbsUpText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/accept_gift"
                android:textColor="@color/tan" 
                android:textSize="12sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_marginRight="7dp"
            android:layout_marginTop="7dp"
            android:layout_weight="0.5"
            android:gravity="center"
            android:orientation="vertical" 
            android:onClick="rejectGiftClick" >

            <TextView
                android:id="@+id/thumbsDownIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/icon_thumbs_down_alt"
                android:textColor="@color/tan"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/thumbsDownText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:gravity="center"
                android:text="@string/reject_gift"
                android:textColor="@color/tan" 
                android:textSize="12sp" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="10dp" >

       <com.loopj.android.image.SmartImageView
            android:id="@+id/dealImage"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="0.39"
            android:adjustViewBounds="false"
            android:contentDescription="Deals Merchant Image"
            android:scaleType="fitXY" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1.0"
            android:background="@drawable/tan_rounded_bottom_only"
            android:orientation="vertical"
            android:padding="10dp" >
			
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight=".6"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/offerValid"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Offer valid at"
                        android:textSize="10sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/address1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:maxLines="3"
                        android:textSize="10sp"
                        android:text="123 Main St \nDenver, CO 80205" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight=".4"
                    android:gravity="right"
                    android:orientation="vertical" >

                    <com.loopj.android.image.SmartImageView
                        android:id="@+id/merchantLogo"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_gravity="right"
                        android:layout_marginLeft="15dp"
                        android:layout_weight="1"
                        android:contentDescription="Deal Logo Image"
                        android:scaleType="fitEnd" />

                </LinearLayout>
            </LinearLayout>
            
            <TextView
                android:id="@+id/summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="15dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Deal Summary"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/details"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginRight="10dp"
                android:layout_marginLeft="10dp"
                android:layout_marginBottom="10dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="Deal Details"
                android:textSize="14sp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="bottom"
                android:orientation="horizontal" >

                <com.loopj.android.image.SmartImageView
                    android:id="@+id/dealCreatorLogo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                 />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:gravity="bottom|right"
                    android:orientation="vertical" >

                    <TextView
                        android:id="@+id/expires"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="10dp"
                        android:gravity="right"
                        android:textStyle="bold" />

                </LinearLayout>

            </LinearLayout>
            
        </LinearLayout>

	</LinearLayout>
	
</LinearLayout>